@@ -114,7 +114,7 @@ end_define
 begin_typedef
 typedef|typedef
 enum|enum
-DECL|enum|__anon27de419e0103
+DECL|enum|__anon2a32b64b0103
 block|{
 DECL|enumerator|TAG_SEARCH_NONE
 name|TAG_SEARCH_NONE
@@ -132,7 +132,7 @@ end_typedef
 
 begin_enum
 enum|enum
-DECL|enum|__anon27de419e0203
+DECL|enum|__anon2a32b64b0203
 block|{
 DECL|enumerator|PROP_0
 name|PROP_0
@@ -1349,7 +1349,7 @@ name|selection_end
 decl_stmt|;
 name|GList
 modifier|*
-name|iterator
+name|list
 decl_stmt|;
 name|gimp_tag_entry_toggle_desc
 argument_list|(
@@ -1394,19 +1394,19 @@ expr_stmt|;
 block|}
 for|for
 control|(
-name|iterator
+name|list
 operator|=
 name|tag_entry
 operator|->
 name|selected_items
 init|;
-name|iterator
+name|list
 condition|;
-name|iterator
+name|list
 operator|=
 name|g_list_next
 argument_list|(
-name|iterator
+name|list
 argument_list|)
 control|)
 block|{
@@ -1423,7 +1423,7 @@ argument_list|)
 argument_list|,
 name|GIMP_OBJECT
 argument_list|(
-name|iterator
+name|list
 operator|->
 name|data
 argument_list|)
@@ -1441,7 +1441,7 @@ name|mode
 operator|==
 name|GIMP_TAG_ENTRY_MODE_ASSIGN
 operator|&&
-name|iterator
+name|list
 condition|)
 block|{
 name|gimp_tag_entry_assign_tags
@@ -2393,10 +2393,6 @@ decl_stmt|;
 name|gint
 name|i
 decl_stmt|;
-name|GimpTag
-modifier|*
-name|tag
-decl_stmt|;
 name|GList
 modifier|*
 name|query_list
@@ -2468,8 +2464,10 @@ operator|>
 literal|0
 condition|)
 block|{
+name|GimpTag
+modifier|*
 name|tag
-operator|=
+init|=
 name|gimp_tag_try_new
 argument_list|(
 name|parsed_tags
@@ -2477,18 +2475,16 @@ index|[
 name|i
 index|]
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 if|if
 condition|(
 operator|!
 name|tag
 condition|)
-block|{
 name|has_invalid_tags
 operator|=
 name|TRUE
 expr_stmt|;
-block|}
 name|query_list
 operator|=
 name|g_list_append
@@ -2615,7 +2611,7 @@ operator|==
 name|GIMP_TAG_ENTRY_MODE_QUERY
 condition|)
 block|{
-comment|/* tag query was suppressed until we got to auto completion (here),        * now queue tag query */
+comment|/* tag query was suppressed until we got to auto completion (here),        * now queue tag query        */
 name|tag_entry
 operator|->
 name|tag_query_pending
@@ -2692,7 +2688,7 @@ operator|!=
 name|end_position
 condition|)
 block|{
-comment|/* only autocomplete what user types,        * not was autocompleted in the previous step. */
+comment|/* only autocomplete what user types,        * not was autocompleted in the previous step.        */
 return|return
 name|FALSE
 return|;
@@ -2943,12 +2939,6 @@ modifier|*
 name|tag_entry
 parameter_list|)
 block|{
-name|GList
-modifier|*
-name|selected_iterator
-init|=
-name|NULL
-decl_stmt|;
 name|gchar
 modifier|*
 modifier|*
@@ -2969,6 +2959,10 @@ modifier|*
 name|tag_list
 init|=
 name|NULL
+decl_stmt|;
+name|GList
+modifier|*
+name|list
 decl_stmt|;
 name|parsed_tags
 operator|=
@@ -3031,25 +3025,25 @@ argument_list|)
 expr_stmt|;
 for|for
 control|(
-name|selected_iterator
+name|list
 operator|=
 name|tag_entry
 operator|->
 name|selected_items
 init|;
-name|selected_iterator
+name|list
 condition|;
-name|selected_iterator
+name|list
 operator|=
 name|g_list_next
 argument_list|(
-name|selected_iterator
+name|list
 argument_list|)
 control|)
 block|{
 name|gimp_tagged_set_tags
 argument_list|(
-name|selected_iterator
+name|list
 operator|->
 name|data
 argument_list|,
@@ -3332,7 +3326,7 @@ parameter_list|)
 block|{
 name|GList
 modifier|*
-name|iterator
+name|list
 decl_stmt|;
 name|g_return_if_fail
 argument_list|(
@@ -3374,19 +3368,19 @@ argument_list|)
 expr_stmt|;
 for|for
 control|(
-name|iterator
+name|list
 operator|=
 name|tag_entry
 operator|->
 name|selected_items
 init|;
-name|iterator
+name|list
 condition|;
-name|iterator
+name|list
 operator|=
 name|g_list_next
 argument_list|(
-name|iterator
+name|list
 argument_list|)
 control|)
 block|{
@@ -3396,7 +3390,7 @@ name|gimp_tagged_get_tags
 argument_list|(
 name|GIMP_TAGGED
 argument_list|(
-name|iterator
+name|list
 operator|->
 name|data
 argument_list|)
@@ -3413,7 +3407,7 @@ argument_list|)
 argument_list|,
 name|GIMP_OBJECT
 argument_list|(
-name|iterator
+name|list
 operator|->
 name|data
 argument_list|)
@@ -3434,7 +3428,7 @@ condition|)
 block|{
 if|if
 condition|(
-name|iterator
+name|list
 condition|)
 block|{
 name|gimp_tag_entry_load_selection
@@ -3513,18 +3507,10 @@ name|tag_list
 decl_stmt|;
 name|GList
 modifier|*
-name|tag_iterator
+name|list
 decl_stmt|;
 name|gint
 name|insert_pos
-decl_stmt|;
-name|GimpTag
-modifier|*
-name|tag
-decl_stmt|;
-name|gchar
-modifier|*
-name|text
 decl_stmt|;
 name|tag_entry
 operator|->
@@ -3556,9 +3542,7 @@ name|tag_entry
 operator|->
 name|selected_items
 condition|)
-block|{
 return|return;
-block|}
 name|selected_item
 operator|=
 name|GIMP_TAGGED
@@ -3588,7 +3572,6 @@ if|if
 condition|(
 name|sort
 condition|)
-block|{
 name|tag_list
 operator|=
 name|g_list_sort
@@ -3598,32 +3581,34 @@ argument_list|,
 name|gimp_tag_compare_func
 argument_list|)
 expr_stmt|;
-block|}
 for|for
 control|(
-name|tag_iterator
+name|list
 operator|=
 name|tag_list
 init|;
-name|tag_iterator
+name|list
 condition|;
-name|tag_iterator
+name|list
 operator|=
 name|g_list_next
 argument_list|(
-name|tag_iterator
+name|list
 argument_list|)
 control|)
 block|{
+name|GimpTag
+modifier|*
 name|tag
-operator|=
-name|GIMP_TAG
-argument_list|(
-name|tag_iterator
+init|=
+name|list
 operator|->
 name|data
-argument_list|)
-expr_stmt|;
+decl_stmt|;
+name|gchar
+modifier|*
+name|text
+decl_stmt|;
 name|text
 operator|=
 name|g_strdup_printf
@@ -3720,9 +3705,6 @@ decl_stmt|;
 name|gint
 name|i
 decl_stmt|;
-name|gunichar
-name|c
-decl_stmt|;
 name|position
 operator|=
 name|gtk_editable_get_position
@@ -3795,6 +3777,9 @@ name|i
 operator|++
 control|)
 block|{
+name|gunichar
+name|c
+decl_stmt|;
 name|c
 operator|=
 name|g_utf8_get_char
@@ -3816,12 +3801,10 @@ argument_list|(
 name|c
 argument_list|)
 condition|)
-block|{
 name|prefix_start
 operator|=
 name|cursor
 expr_stmt|;
-block|}
 block|}
 operator|*
 name|cursor
@@ -3882,11 +3865,7 @@ name|all_tags
 decl_stmt|;
 name|GList
 modifier|*
-name|tag_iterator
-decl_stmt|;
-name|GimpTag
-modifier|*
-name|tag
+name|list
 decl_stmt|;
 specifier|const
 name|gchar
@@ -3915,11 +3894,9 @@ argument_list|)
 operator|<
 literal|1
 condition|)
-block|{
 return|return
 name|NULL
 return|;
-block|}
 name|prefix
 operator|=
 name|g_utf8_normalize
@@ -3937,11 +3914,9 @@ condition|(
 operator|!
 name|prefix
 condition|)
-block|{
 return|return
 name|NULL
 return|;
-block|}
 name|all_tags
 operator|=
 name|g_hash_table_get_keys
@@ -3962,29 +3937,28 @@ argument_list|)
 expr_stmt|;
 for|for
 control|(
-name|tag_iterator
+name|list
 operator|=
 name|all_tags
 init|;
-name|tag_iterator
+name|list
 condition|;
-name|tag_iterator
+name|list
 operator|=
 name|g_list_next
 argument_list|(
-name|tag_iterator
+name|list
 argument_list|)
 control|)
 block|{
+name|GimpTag
+modifier|*
 name|tag
-operator|=
-name|GIMP_TAG
-argument_list|(
-name|tag_iterator
+init|=
+name|list
 operator|->
 name|data
-argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|tag_name
 operator|=
 name|gimp_tag_get_name
@@ -4030,9 +4004,7 @@ name|i
 index|]
 argument_list|)
 condition|)
-block|{
 break|break;
-block|}
 block|}
 if|if
 condition|(
@@ -4040,19 +4012,17 @@ name|i
 operator|==
 name|length
 condition|)
-block|{
 name|candidates
 operator|=
 name|g_list_append
 argument_list|(
 name|candidates
 argument_list|,
-name|tag_iterator
+name|list
 operator|->
 name|data
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 block|}
 name|g_list_free
@@ -4144,11 +4114,9 @@ condition|(
 operator|!
 name|candidates
 condition|)
-block|{
 return|return
 name|NULL
 return|;
-block|}
 name|normalized_prefix
 operator|=
 name|g_utf8_normalize
@@ -4166,11 +4134,9 @@ condition|(
 operator|!
 name|normalized_prefix
 condition|)
-block|{
 return|return
 name|NULL
 return|;
-block|}
 name|prefix_length
 operator|=
 name|strlen
@@ -4299,9 +4265,7 @@ condition|(
 operator|!
 name|c
 condition|)
-block|{
 break|break;
-block|}
 for|for
 control|(
 name|i
@@ -4598,27 +4562,23 @@ condition|)
 block|{
 name|GList
 modifier|*
-name|selected_iterator
-init|=
-name|tag_entry
-operator|->
-name|selected_items
+name|list
 decl_stmt|;
 for|for
 control|(
-name|selected_iterator
+name|list
 operator|=
 name|tag_entry
 operator|->
 name|selected_items
 init|;
-name|selected_iterator
+name|list
 condition|;
-name|selected_iterator
+name|list
 operator|=
 name|g_list_next
 argument_list|(
-name|selected_iterator
+name|list
 argument_list|)
 control|)
 block|{
@@ -4628,7 +4588,7 @@ name|gimp_tagged_get_tags
 argument_list|(
 name|GIMP_TAGGED
 argument_list|(
-name|selected_iterator
+name|list
 operator|->
 name|data
 argument_list|)
@@ -4645,7 +4605,7 @@ argument_list|)
 argument_list|,
 name|GIMP_OBJECT
 argument_list|(
-name|selected_iterator
+name|list
 operator|->
 name|data
 argument_list|)
@@ -4658,7 +4618,7 @@ block|}
 if|if
 condition|(
 operator|!
-name|selected_iterator
+name|list
 condition|)
 block|{
 name|tag_entry
@@ -4728,9 +4688,7 @@ operator|->
 name|description_shown
 operator|)
 condition|)
-block|{
 return|return;
-block|}
 if|if
 condition|(
 name|tag_entry
@@ -4901,11 +4859,9 @@ name|event
 operator|->
 name|window
 condition|)
-block|{
 return|return
 name|FALSE
 return|;
-block|}
 if|if
 condition|(
 operator|!
@@ -4916,11 +4872,9 @@ argument_list|)
 operator|->
 name|description_shown
 condition|)
-block|{
 return|return
 name|FALSE
 return|;
-block|}
 if|if
 condition|(
 name|tag_entry
@@ -6389,16 +6343,16 @@ name|recent_item
 init|=
 name|NULL
 decl_stmt|;
-name|GList
-modifier|*
-name|tags_iterator
-decl_stmt|;
 name|gchar
 modifier|*
 name|stripped_string
 decl_stmt|;
 name|gint
 name|stripped_length
+decl_stmt|;
+name|GList
+modifier|*
+name|list
 decl_stmt|;
 if|if
 condition|(
@@ -6408,11 +6362,9 @@ name|mode
 operator|==
 name|GIMP_TAG_ENTRY_MODE_ASSIGN
 condition|)
-block|{
 return|return
 name|FALSE
 return|;
-block|}
 name|stripped_string
 operator|=
 name|g_strdup
@@ -6446,7 +6398,7 @@ operator|<=
 literal|0
 condition|)
 block|{
-comment|/* there is no content in the string,        * therefore don't add to recent list. */
+comment|/* there is no content in the string,        * therefore don't add to recent list.        */
 return|return
 name|FALSE
 return|;
@@ -6501,19 +6453,19 @@ expr_stmt|;
 block|}
 for|for
 control|(
-name|tags_iterator
+name|list
 operator|=
 name|entry
 operator|->
 name|recent_list
 init|;
-name|tags_iterator
+name|list
 condition|;
-name|tags_iterator
+name|list
 operator|=
 name|g_list_next
 argument_list|(
-name|tags_iterator
+name|list
 argument_list|)
 control|)
 block|{
@@ -6524,7 +6476,7 @@ name|strcmp
 argument_list|(
 name|tags_string
 argument_list|,
-name|tags_iterator
+name|list
 operator|->
 name|data
 argument_list|)
@@ -6532,7 +6484,7 @@ condition|)
 block|{
 name|recent_item
 operator|=
-name|tags_iterator
+name|list
 operator|->
 name|data
 expr_stmt|;
@@ -7023,9 +6975,6 @@ name|entry
 parameter_list|)
 block|{
 name|gint
-name|i
-decl_stmt|;
-name|gint
 name|region_start
 decl_stmt|;
 name|gint
@@ -7042,6 +6991,9 @@ name|cursor_position
 decl_stmt|;
 name|glong
 name|length_before
+decl_stmt|;
+name|gint
+name|i
 decl_stmt|;
 name|cursor_position
 operator|=
@@ -7950,7 +7902,7 @@ decl_stmt|;
 name|gint
 name|end_pos
 decl_stmt|;
-comment|/* make sure the whole tag is selected,    * including a  separator */
+comment|/* make sure the whole tag is selected,    * including a  separator    */
 name|gtk_editable_get_selection_bounds
 argument_list|(
 name|GTK_EDITABLE
@@ -8411,7 +8363,7 @@ expr_stmt|;
 block|}
 block|}
 block|}
-comment|/* special case when cursor is in the last position:    * it must be positioned after the last whitespace. */
+comment|/* special case when cursor is in the last position:    * it must be positioned after the last whitespace.    */
 if|if
 condition|(
 name|position
